src/test/resources/regression/verification/overflow/invalid/Overflow1.scala
import leon.lang._

object Overflow1 {

  def foo1(x: Int): Int = {
    x + 1
  }

}
